# groqai-rust-sdk

./: .gitignore  API_COMPLIANCE_CHECK.md  CHANGELOG.md  Cargo.toml  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  README_CN.md  README_en.md  RELEASE_NOTES.md
examples/: audio_transcription.rs  batch_processing.rs  chat_completion.rs  cli_chat.rs  client_convenience.rs  client_creation_methods.rs  environment_setup.rs  file_management.rs  import_patterns.rs  model_info.rs  modern_examples.rs  streaming_chat.rs
src/: client.rs  error.rs  lib.rs  models.rs  rate_limit.rs  transport.rs  types.rs
src/api/: audio.rs  batches.rs  chat.rs  files.rs  fine_tunings.rs  mod.rs  models.rs
tests/: audio.rs  batches.rs  chat.rs  client.rs  files.rs  models.rs
