[package]
name = "groqai"
version = "0.1.5"
edition = "2021"
description = "A modern, type-safe Rust SDK for the Groq AI API with enterprise-grade features"
authors = ["Alex Wang <alex.wang@msn.com>"]
license = "MIT"
repository = "https://github.com/hiddenpath/groqai-rust-sdk"
keywords = ["groq", "ai", "api", "rust", "sdk"]
categories = ["api-bindings"]
readme = "README_en.md"

[dependencies]
reqwest = { version = "0.12.22", features = ["json", "blocking", "multipart", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
bytes = "1.10.1"
