[package]
name = "groqai"
version = "0.1.8"
edition = "2021"
description = "A modern, type-safe Rust SDK for the Groq AI API with enterprise-grade features"
authors = ["Alex Wang <alex.wang@msn.com>"]
license = "MIT"
repository = "https://github.com/hiddenpath/groqai-rust-sdk"
keywords = ["groq", "ai", "api", "rust", "sdk"]
categories = ["api-bindings"]
readme = "README_en.md"

[dependencies]
reqwest = { version = "0.12.23", features = ["json", "blocking", "multipart", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
bytes = "1.10.1"
tracing = "0.1.41"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
url = "2.5.4"
async-trait = "0.1.89"
futures-util = "0.3.31"

[dev-dependencies]
wiremock = "0.6.4"